completed tablet version and fix carousel on tablet device

--- a/dark-souls-wiki/src/app/main-page/carousel/carousel.component.scss
+++ b/dark-souls-wiki/src/app/main-page/carousel/carousel.component.scss
@@ -9,3 +9,8 @@
         height: 460px;
     }
 }
+@media (max-width:1024px) {
+    ::ng-deep .p-galleria-item{
+        align-items: normal !important;
+    }
+}
